--- a/greg.html
+++ b/greg.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-		var text = ['"*Makes things awkward*"', '"This would be a great autobiography title"', '"*Snaps*"', '"Just take a dick pic"', '"...And theres a naked dad inside"', '"Lil Spacejam Jr"', '"I have a website now!?"', '"I no longer fear death"', '"<a href="https://twitter.com/coolhandgreg">#whatcan</a>"']
+		var text = ['"*Makes things awkward*"', '"This would be a great autobiography title"', '"*Snaps*"', '"Just take a dick pic"', '"...And theres a naked dad inside"', '"Lil Spacejam Jr"', '"I have a website now!?"', '"I no longer fear death"', '"I think this will be the birth of my eternal empire."', '"<a href="https://twitter.com/coolhandgreg">#whatcan</a>"']
 
 		function rotateText() {
   			var ct = $("#rotate").data("text") || 0;
