Update, and spelling...

--- a/greg.html
+++ b/greg.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-		var text = ['"*Makes things awkward*"', '"This would be a great autobiography title"', '"*Snaps*"', '"Just take a dick pic"', '"...And theres a naked dad inside"', '"Lil Spacejam Jr"', '"I no loger fear death"', '"<a href="twitter.com/?search?q=%23whatcan">#whatcan</a>"']
+		var text = ['"*Makes things awkward*"', '"This would be a great autobiography title"', '"*Snaps*"', '"Just take a dick pic"', '"...And theres a naked dad inside"', '"Lil Spacejam Jr"', '"I no longer fear death"', '"*<a href="churchofsatan.com>churchofsatan.com</a>*"' , '"<a href="twitter.com/?search?q=%23whatcan">#whatcan</a>"']
 
 		function rotateText() {
   			var ct = $("#rotate").data("text") || 0;
