Oh look, new ajaxness and some other cool changes.
I like this.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css.css">
 	<script src="jquery.min.js"></script>
+	<script src="app.js"></script>
 </head>
 <body>
 <div class="main">
@@ -16,15 +18,41 @@
 					<div class="home-spin"><a href="">Home</a></div>
 				</div>
 			</div>
-			<ul>
-				<li><a href="" class="one">Link One</a></li>
-				<li><a href="" class="two">Link Two</a></li>
-				<li><a href="" class="three">Link Three</a></li>
-			</ul>
+			<div class="one-main">
+				<div class="one-contain">
+					<div class="spin-one">
+						<div class="one"><a href="" >Blog</a></div>
+						<div  class="one2"><a href="">Read It</a></div>
+					</div>
+				</div>
+			</div>
+			<div class="two-main">
+				<div class="two-contain">
+					<div class="spin-two">
+						<div class="two"><a href="" >Github</a></div>
+						<div  class="two2"><a href="">Hansolo669</a></div>
+					</div>
+				</div>
+			</div>
+			<div class="three-main">
+				<div class="three-contain">
+					<div class="spin-three">
+						<div class="three"><a href="" >Things</a></div>
+						<div  class="three2"><a href="">And Stuff</a></div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="content">
-		<p> Content. WHOA</p>
+		<div class="left">
+			<div><p>Flickr & Instagram:</p></div>
+		</div>
+		<div class="right">
+			<div>
+				<p> blah2</p>
+			</div>
+		</div>
 	</div>
 </div>
 </body>
