W00t. things look pretty(r) now.
Now I just need to get twitter and some other (blog) service running in
the right pane.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 					<div class="home"><a href="">Cal Things</a></div>
 					<div class="home-spin"><a href="">Home</a></div>
 				</div>
+
 			</div>
-			<div class="one-main">
+			<div class="one"><a href="" >Blog</a></div>
+			<div class="two"><a href="" >Github</a></div>
+			<div class="three"><a href="" >Things</a></div>
+
+			<!--<div class="one-main">
 				<div class="one-contain">
 					<div class="spin-one">
 						<div class="one"><a href="" >Blog</a></div>
@@ -41,7 +46,7 @@
 						<div  class="three2"><a href="">And Stuff</a></div>
 					</div>
 				</div>
-			</div>
+			</div>-->
 		</div>
 	</div>
 	<div class="content">
