--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <div class="main">
-	<span class="title"><a href="">Cal Things</a></span>
 	<div class="header">
+		<span class="title"><a href="">Cal Things</a></span>
 	</div>
 	<div class="padding">
 		<div class="menu">
-			<div class="spin-contain" ontouchstart="this.classList.toggle('hover');">
+			<div class="spin-contain">
 				<div class="spin">
 					<div class="home"><a href="">Cal Things</a></div>
 					<div class="home-spin"><a href="">Home</a></div>
@@ -22,41 +22,14 @@
 			<div class="one"><a href="" >Blog</a></div>
 			<div class="two"><a href="" >Github</a></div>
 			<div class="three"><a href="" >Things</a></div>
-
-			<!--<div class="one-main">
-				<div class="one-contain">
-					<div class="spin-one">
-						<div class="one"><a href="" >Blog</a></div>
-						<div  class="one2"><a href="">Read It</a></div>
-					</div>
-				</div>
-			</div>
-			<div class="two-main">
-				<div class="two-contain">
-					<div class="spin-two">
-						<div class="two"><a href="" >Github</a></div>
-						<div  class="two2"><a href="">Hansolo669</a></div>
-					</div>
-				</div>
-			</div>
-			<div class="three-main">
-				<div class="three-contain">
-					<div class="spin-three">
-						<div class="three"><a href="" >Things</a></div>
-						<div  class="three2"><a href="">And Stuff</a></div>
-					</div>
-				</div>
-			</div>-->
 		</div>
 	</div>
 	<div class="content">
 		<div class="left">
-			<div><p>Flickr & Instagram:</p></div>
+			<div><p><a href="http://flickr.com/hansolo669">Flickr</a> & <a href="http://instagram.com/hansolo669">Instagram</a>:</p></div>
 		</div>
 		<div class="right">
-			<div>
-				<p> blah2</p>
-			</div>
+			<div><p><a href="">Something</a> & <a href="http://twitter.com/hansolo669">Twitter</a>:</p></div>
 		</div>
 	</div>
 </div>
