fixed a little bug .
the infinite page loader would load more pages… from /r/pics. wut.

--- a/lel.html
+++ b/lel.html
@@ -198,7 +198,7 @@ $(document).ready(function() {
 	function loadmore(){
 		console.log(after);
 		datavar = {'limit': '50', 'after':after};
-		imgload(datavar);
+		checkurl();
 	}
 
 	$(window).scroll(function(){
