Lots of code Refinement, updated jquery

--- a/lel.html
+++ b/lel.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="jquery.min.js"></script>
-	<script src="reddit.js"></script>
 	<link rel="stylesheet" type="text/css" href="reddit.css">
 </head>
 <!--
@@ -27,17 +25,8 @@ nsfw check box
 		</form>
 	</div>
 	<div class="images" id="images">
-		<!--<div class="image"><img src='http://placehold.it/350'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/700'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/650x500'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/648x650'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/350'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/700'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/650x500'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/648x650'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/350'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/700'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/650x500'><h1 class="title">Title</h1></div>
-		<div class="image"><img src='http://placehold.it/648x650'><h1 class="title">Title</h1></div>-->
 	</div>
 </body>
+	<script type='text/javascript' src="jquery-2.0.3.min.js"></script>
+	<script type='text/javascript' src="reddit.js"></script>
+</html>
