removed webkit only features from search.html

--- a/search.html
+++ b/search.html
@@ -19,10 +19,24 @@
 			text-align: center;
 		}
 
+		::-moz-placeholder{
+			text-align: center;
+		}
+
+		:-ms-input-placeholder{
+			text-align: center;
+		}
+
 		.contain{
 			display: -webkit-flex;
 			-webkit-align-items: center;
+			-moz-align-items: center;
+			-ms-align-items: center;
+			align-items: center;
 			-webkit-justify-content: center;
+			-moz-justify-content: center;
+			-ms-justify-content: center;
+			justify-content: center;
 			width: 100%;
 			height: 100%;
 		}
