--- a/search.html
+++ b/search.html
@@ -29,6 +29,9 @@
 
 		.contain{
 			display: -webkit-flex;
+			display: -moz-flex;
+			display: -ms-flex;
+			display: flex;
 			-webkit-align-items: center;
 			-moz-align-items: center;
 			-ms-align-items: center;
