added viewport meta tag

--- a/search.html
+++ b/search.html
@@ -61,6 +61,7 @@
 		});
 	});
 	</script>
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
 	<div class="contain">
