added url detection

--- a/search.html
+++ b/search.html
@@ -57,7 +57,15 @@
 		document.getElementById("searchform").addEventListener("submit", function(event){
 			event.preventDefault();
 			var str = document.getElementById('search').value;
-			window.location = "https://www.google.ca/search?client=ChromeSafariFox&rls=en&q=" + encodeURI(str);
+			if (str.match(/\.[a-z]+$/) || str.match(/^[a-zA-Z]+[:\/\/]+/)) {
+				if (!! str.match(/^[a-zA-Z]+\./)) {
+					window.location = "http://www." + str;
+				} else {
+					window.location = str;
+				}
+			} else {
+				window.location = "https://www.google.ca/search?client=ChromeSafariFox&rls=en&q=" + encodeURI(str);
+			}
 		});
 	});
 	</script>
