--- a/lel.html
+++ b/lel.html
@@ -1,10 +1,11 @@
 <html>
 <head>
+	<title>Time-Waste o-matic 3000</title>
 	<link rel="stylesheet" type="text/css" href="reddit.css">
 	<script src="http://fb.me/react-0.11.1.min.js"></script>
 	<script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
-	<script src="/element1.min.js" type="text/javascript"></script>
-	<script src="/reddit2.js" type="text/jsx"></script>
+	<script src="element1.min.js" type="text/javascript"></script>
+	<script src="reddit2.js" type="text/jsx"></script>
 </head>
 <body>
 	<div id="react">
