titles are hard

--- a/lel.html
+++ b/lel.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Time-Waste o-matic 3000</title>
+	<title>Time Waste O-matic 3000</title>
 	<link rel="stylesheet" type="text/css" href="reddit.css">
 	<script src="http://fb.me/react-0.11.1.min.js"></script>
 	<script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
