tweaked data normalization and added /r/askreddit content

--- a/viz/viz.html
+++ b/viz/viz.html
@@ -22,8 +22,8 @@ body{
 <body>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="viz.js"></script>
-<h1>Most common words in /r/pics comments</h1>
-<p id="stats">2000 comments, </p>
+<h1>Most common words in <select id="sub"><option value="pics" selected>/r/pics</option><option value="askreddit">/r/askreddit</option></select> comments</h1>
+<p id="stats"></p>
 <p id="info"></p>
 <form id="opts">
 	<label>Minimum word length: <input type="number" value="3" id="min"/></label>
